Update readme with drat script.